--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -19,3 +19,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           projectId: focus-81bf0
           channelId: live
+          entryPoint: "."
