--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,12 @@
     ],
     "headers": [
       {
+        "source": "/sw.js",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-cache" }
+        ]
+      },
+      {
         "source": "/js/*.js",
         "headers": [
           {
