refactor: streamline configuration files and enhance code formatting

--- a/firebase.json
+++ b/firebase.json
@@ -1,55 +1,45 @@
 {
-  "hosting": {
-    "public": ".",
-    "ignore": [
-      "firebase.json",
-      ".firebaserc",
-      ".git",
-      ".gitignore",
-      "README.md",
-      "STRUCTURE.md",
-      "node_modules"
-    ],
-    "headers": [
-      {
-        "source": "/sw.js",
+    "hosting": {
+        "public": ".",
+        "ignore": ["firebase.json", ".firebaserc", ".git", ".gitignore", "README.md", "STRUCTURE.md", "node_modules"],
         "headers": [
-          { "key": "Cache-Control", "value": "no-cache" }
+            {
+                "source": "/sw.js",
+                "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
+            },
+            {
+                "source": "/js/*.js",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=3600"
+                    }
+                ]
+            },
+            {
+                "source": "/css/*.css",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=3600"
+                    }
+                ]
+            },
+            {
+                "source": "**/*.@(png|jpg|svg|ico|webp)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=86400"
+                    }
+                ]
+            }
+        ],
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
         ]
-      },
-      {
-        "source": "/js/*.js",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=3600"
-          }
-        ]
-      },
-      {
-        "source": "/css/*.css",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=3600"
-          }
-        ]
-      },
-      {
-        "source": "**/*.@(png|jpg|svg|ico|webp)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=86400"
-          }
-        ]
-      }
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+    }
 }
