--- a/package.json
+++ b/package.json
@@ -1,5 +1,28 @@
 {
-  "name": "focus-app",
-  "version": "1.0.0",
-  "private": true
+    "name": "focus-app",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "prepare": "husky"
+    },
+    "devDependencies": {
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.2.10",
+        "prettier": "^3.3.3"
+    },
+    "lint-staged": {
+        "*.js": [
+            "prettier --write",
+            "eslint --fix"
+        ],
+        "*.{html,css,json,md}": [
+            "prettier --write"
+        ]
+    }
 }
