chore: update configuration and documentation for improved build process
- Added 'scripts/' to ESLint ignore patterns.
- Updated .gitignore to exclude .env.example and clarify environment file usage.
- Changed Firebase hosting public directory to 'dist'.
- Introduced 'build' script in package.json for easier project builds.
- Revised README for clearer setup instructions and security practices.
- Enhanced GitHub workflows with environment variables for Firebase deployment.
- Replaced hardcoded API keys in app.js and storage.js with placeholders for security.

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
     "hosting": {
-        "public": ".",
+        "public": "dist",
         "ignore": ["firebase.json", ".firebaserc", ".git", ".gitignore", "README.md", "STRUCTURE.md", "node_modules"],
         "headers": [
             {
