--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# Environment files
+# Environment files (never commit – contains keys)
 .env
 .env.local
 .env.*.local
+!.env.example
 
 # Dependencies
 node_modules/
