--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
+        "build": "node scripts/build.js",
         "prepare": "husky"
     },
     "devDependencies": {
